# odm-report-shot-coverage

./: .gitignore  README.md  odm-report-shot-coverage.py  parse-reconstruction.py  reconstruction_to_image_boundaries.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: azure-static-web-apps-ashy-sand-0cfe9c210.yml  codeql-analysis.yml  dependency-review.yml  python-app.yml
example/project/: cameras.json
example/project/odm_orthophoto/: odm_orthophoto.tif  odm_orthophoto_corners.txt
example/project/odm_report/: shots.geojson  stats.json
example/project/odm_report/camera-coverage/: index.css  index.js
example/project/odm_report/camera-coverage/data/: odm_orthophoto_corners.json  reconstruction_shots.json
example/project/odm_report/camera_coverage/: index.css  index.html  index.js
example/project/odm_report/shot_coverage/: index.html  index.js
models/: camera.py  point.py  reconstruction.py  shot.py  test_Camera.py  test_camera.py  test_fixtures.py  test_reconstruction.py  test_shot.py  test_wavefront_25d.py  wavefront_25d.py
resources/: reconstruction.json
resources/odm_report/: shots.geojson
src/models/: test_camera.py  test_reconstruction.py  test_shot.py
src/odm_report_shot_coverage/models/: camera.py  point.py  reconstruction.py  shot.py  test_camera.py  test_fixtures.py  test_reconstruction.py  test_shot.py  test_wavefront_25d.py  wavefront_25d.py
src/odm_report_shot_coverage/scripts/: report.py
src/odm_report_shot_coverage/scripts/web/: data  images  index.js
web/: index.css  index.html  index.js
(+3 files in other folders)
