[metadata]
name = odm-report-shot-coverage
version = 0.1.3
author = Alexandre Masselot
author_email = alexandre.masselot@gmail.com
description = From an OpenDroneMap reconstruction, our goal is to see which part of the ortho photo is covered by each shot.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/terra-submersa/odm-report-shot-coverage
project_urls =
    Bug Tracker = https://github.com/terra-submersa/odm-report-shot-coverage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
scripts =
    bin/odm-report-shot-coverage


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    geojson >=2.5.0
    numpy==1.22.3
    Pillow >=9.1.0
    scipy
    argparse
    tqdm
[options.packages.find]
where = src

